# iterative-context

./: .gitignore  AGENTS.md  BUCK  README.md  buck_basedpyright.sh  buck_import_smoke.sh  buck_pytest.sh  elk_ic_deps.bzl  flake.nix  linux-x86_64.tags.json  optimizable_backend.json  pyproject.toml  repomix-output.xml
.hypothesis/constants/: 0f58eb624e2170a0  16a712e84ba55d04  2041d65c0bdf7dfc  430ef8269edc8805  4acb6b6a49aa6a45  58d3fceec14484db  88ba4f3cb349c0ea  8dccd3420bee89db  95745ae7821e913c  a5164777755b6926  b0b6a75c9afb15c1  bfe2589bcb9c445a  e2ba7639c97a97c8  ed75a52dd5586707  fbeac6778bc9b54f
notes/: graph_replay.md
notes/tests_and_invariants/: when_to_use_what.md
src/iterative_context/: __init__.py  anchor_policy.py  expansion.py  exploration.py  fuzzy_rank.py  graph_models.py  graph_replay.py  graph_session.py  normalize.py  path_ids.py  policy.py  scoring.py  scoring_eval.py  serialization.py  server.py  store.py  traversal.py  types.py  validate_policy.py
src/iterative_context/injest/: llm_tldr_adapter.py
tests/: conftest.py  graph_dsl.py  snapshot_graph.py  test_expand_invariants.py  test_expansion.py  test_expansion_properties.py  test_expansion_vs_query.py  test_fuzzy_rank.py  test_graph_invariants.py  test_graph_models.py  test_graph_replay.py  test_import_smoke.py  test_llm_tldr_normalization.py  test_resolve_candidates.py  test_resolve_expand.py  test_scoring_eval.py  test_serialization.py  test_server.py  test_traversal_selection.py  test_validate_policy.py
tools/: buck_basedpyright_main.py  buck_import_smoke.py  buck_pytest_main.py
(+5 files in other folders)
